5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1838_1274.log
== TEST (2019-06-26 10:25:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = int(input("M:"))
m = zeros((v,v), dtype = int)
v = v-1
k=0
for i in range(v,-1,-1):
	for j in range(v, -1,-1)
	m[i][j] = i+1
	m[j][i] = i+1
print(m)
-- ERROR:
File "XXXX", line 9
    for j in range(v, -1,-1)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:25:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = int(input("M:"))
m = zeros((v,v), dtype = int)
v = v-1
k=0
for i in range(v,-1,-1):
	for j in range(v, -1,-1):
		m[i][j] = i+1
		m[j][i] = i+1
print(m)
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:26:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

v = int(input("M:"))
m = zeros((v,v), dtype = int)
v = v-1
k=0
for i in range(v,-1,-1):
	for j in range(v, -1,-1):
		m[i][j] = i+1
		m[j][i] = i+1
print(m)
		
	
-- EXECUTION TIME:
1.07834
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
